Finished basic search and display weather

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Weather App</title>
   </head>
   <body>
+    <p id="weather-description">Enter a city below to display its weather.</p>
+    <p id="temperature"></p>
+    <form>
+      <input type="text" id="city" placeholder="City" />
+      <button type="submit" id="search">Search</button>
+    </form>
     <script src="scripts/main.js"></script>
   </body>
 </html>
