Added random related giphy image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Weather App</title>
   </head>
   <body>
+    <h1>Weather App</h1>
     <p id="weather-description">Enter a city below to display its weather.</p>
     <p id="temperature"></p>
     <form>
@@ -31,6 +32,7 @@
       <label for="celsius">C°</label>
       <button type="submit" id="search">Search</button>
     </form>
+    <img />
     <script src="scripts/main.js"></script>
   </body>
 </html>
